# vokda

./: .gitignore  .loswf  CLAUDE.md  IDEA.md  PRD.md  README.md  amplify.yml  amplify_outputs.json  announcer.npz  justfile  package-lock.json  package.json  switch-aws-env.sh
.agencyx/: .gitignore  config.json  permissions.toml  runtime-restarts.jsonl
.codex/: README.md
.loswf.state/: metrics.jsonl
.pi/: settings.json
.playwright-cli/: page-2026-03-05T20-25-17-486Z.yml  page-2026-03-05T20-25-28-150Z.yml  page-2026-03-05T20-25-36-591Z.yml  page-2026-03-05T20-25-43-915Z.yml  page-2026-03-05T20-25-52-105Z.yml  page-2026-03-05T20-26-25-267Z.yml  page-2026-03-05T20-26-32-187Z.yml  page-2026-03-05T20-26-35-863Z.yml  page-2026-03-05T20-26-45-545Z.yml  page-2026-03-05T20-33-20-616Z.yml  page-2026-03-05T20-35-32-755Z.yml  page-2026-03-05T20-35-41-292Z.yml  page-2026-03-05T20-35-51-348Z.yml
amplify/: tsconfig.json
docs/: AMPLIFY_BACKEND_GEN2.md  AMPLIFY_SETUP.md  API.md  ARCHITECTURE.md  DISCOVERY.md  GITHUB_SETUP.md  GLOSSARY.md  PROVIDER_IDS.md  ROADMAP.md  SCHEMA.md  SYNTHESIS_API.md  VISION.md  VOICE_CATALOG_EXPORT.md  voice-discovery-process.md
infra/: .gitignore  README.md  build.sh  samconfig.toml  template.yaml
scripts/: backfill-age-from-description.mjs  backfill-gender-from-tags.mjs  check-catalog-fresh.mjs  curate-cartesia.mjs  curate-catalog.mjs  curate-deepgram.mjs  curate-lmnt.mjs  (+20 more)
sdks/python/: README.md  pyproject.toml  test_smoke.py
sdks/python/vokda/: __init__.py  client.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: lib.rs  types.rs
(+814 files in other folders)
