[project]
name = "vokda"
version = "0.1.0"
description = "Python SDK for the Vokda TTS API — voice catalog + synthesis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
