[package]
name = "vokda"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for the Vokda TTS API — voice catalog + synthesis"
license = "MIT"
repository = "https://github.com/iksnae/vokda"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
urlencoding = "2"
